# rta-cli

./: .gitignore  AGENTS.md  BUILDING.md  DESIGN_REVAMP_PLAN.md  PLAN.md  PRODUCTION_READINESS.md  README.md  SECURITY_BEST_PRACTICES_REPORT.md  ascii.txt  error.txt  instructions.md  journal.md  pyproject.toml  rta.spec  rta_entry.py
app/: .env.example  App.js  Chat.js  Editor.js  Files.js  GitUI.js  README.md  Terminal.js  app.json  jest.config.js  package-lock.json  package.json  plan.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  REVERSE_PROXY_PLAN.md  TIER_LIMITS.md  docker-compose.prod.yml  docker-compose.yml  dockerizationplan.md  pyproject.toml  requirements.txt  wrangler.toml
cli/: .gitignore  .rta_project.json  AGENTS.md  CHANGELOG.md  README.md  buggy_script.py  cli.py  hello.py  improvement_plan.md  instructions.md  pyproject.toml  rta.spec  rta_debug.spec  rta_noconsole.spec
desktop/: .gitignore  README.md  flake.nix  index.html  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
docs/: CLI_RELEASE_WORKFLOW.md  IDE_RELEASE_WORKFLOW.md
kon/: ascii.txt  plan.md  pyproject.toml  run.py
mobile_backend/: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  RENDER_DOCKER_PLAN.md  auth.go  cleanup.go  deploy.sh  documentation.md  env.go  go.mod  handlers.go  logging.go  main.go  main_test.go  middleware.go  quickstart.md  setup.sh  setup_aws.sh  shell.go  test_tunnel.py
rta-pr-bot/: plan.md
website/: blog.js  (+16 more)
(+442 files in other folders)
