[package]
name = "rta-desktop"
version = "1.0.0"
description = "RTA Desktop Application"
authors = []
edition = "2021"

[lib]
name = "rta_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "lib.rs"

[[bin]]
name = "rta-desktop"
path = "main.rs"

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
